fix layout issue for laptop safari browser

--- a/src/styles/tasksPage.module.css
+++ b/src/styles/tasksPage.module.css
@@ -19,7 +19,7 @@
   flex-direction: column;
   align-items: center;
   background-color: white;
-  margin-top: 30%;
+  margin-top: 10%;
   border-radius: 5px;
 }
 
